--- a/myEmulator/myEmulator/myEmulator.vcxproj.filters
+++ b/myEmulator/myEmulator/myEmulator.vcxproj.filters
@@ -59,5 +59,11 @@
     <ClInclude Include="MemoryAccessViolation.h">
       <Filter>Header Files\Exceptions</Filter>
     </ClInclude>
+    <ClInclude Include="InvalidRegisterAccess.h">
+      <Filter>Header Files\Exceptions</Filter>
+    </ClInclude>
+    <ClInclude Include="InappropriateSize.h">
+      <Filter>Header Files\Exceptions</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
