--- a/myEmulator/myEmulator/myEmulator.vcxproj.filters
+++ b/myEmulator/myEmulator/myEmulator.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="InvalidArgument.h">
       <Filter>Header Files\Exceptions</Filter>
     </ClInclude>
+    <ClInclude Include="ZeroDivision.h">
+      <Filter>Header Files\Exceptions</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
