Fixed jmp and loop and added support to prewriting in file

--- a/myEmulator/myEmulator/myEmulator.vcxproj.filters
+++ b/myEmulator/myEmulator/myEmulator.vcxproj.filters
@@ -72,4 +72,9 @@
       <Filter>Header Files\Exceptions</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.myasm">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
