--- a/myEmulator/myEmulator/myEmulator.vcxproj
+++ b/myEmulator/myEmulator/myEmulator.vcxproj
@@ -159,6 +159,9 @@
     <ClInclude Include="WrongNumberOfOperands.h" />
     <ClInclude Include="ZeroDivision.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.myasm" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
